--- a/app/package.json
+++ b/app/package.json
@@ -3,9 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "ml5": "^0.3.1",
+    "p5": "^0.9.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1"
+    "react-p5-wrapper": "^2.0.0",
+    "react-scripts": "3.1.1",
+    "react-three-fiber": "^2.4.3",
+    "three": "^0.108.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -28,7 +33,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "ml5": "^0.3.1"
-  }
+  "devDependencies": {}
 }
